# qiskit-experiments

./: .buildinfo  .gitignore  .mergify.yml  .pylintrc  3-2.rst  3-3.rst  3.rst  Backend Verification.rst  Backend Verification_1.rst  Backend Verification_Final Tutorial.rst  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Composite Experiment Guides.rst  IQPulseBackend.py  MANIFEST.in  README.md  Tutorial_01.rst  constraints.txt  genindex.html  index.html  noxfile.py  objects.inv  py-modindex.html  pyproject.toml  rb_on_device.py  release_notes.html  requirements-dev.txt  requirements-extras.txt  requirements.txt  search.html  searchindex.js  setup.py  tox.ini  toxfile.py
.doctrees/: index.doctree  release_notes.doctree
.github/: PULL_REQUEST_TEMPLATE.md
JWKim/: IQPulseBackend.py
_modules/: index.html
_sources/: index.rst.txt  release_notes.rst.txt
apidocs/: calibration_management.html  curve_analysis.html  data_processing.html  database_service.html  framework.html  index.html  library.html  main.html  mod_calibration.html  mod_characterization.html  mod_driven_freq_tuning.html  mod_quantum_volume.html  mod_randomized_benchmarking.html  mod_tomography.html  test.html  visualization.html
dev/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  release_notes.html  search.html  searchindex.js
docs/: GUIDELINES.md  conf.py  index.rst  release_notes.rst
examples/: purity_estimation.ipynb
howtos/: artifacts.html  cloud_service.html  experiment_service.html  experiment_times.html  figure_generation.html  index.html  job_splitting.html  rerun_analysis.html  runtime_sessions.html
manuals/: index.html
qiskit_experiments/: T2StarExperiment.py  __init__.py  base_analysis.py  base_experiment.py  exceptions.py  experiment_data.py  matplotlib.py  options_autodoc.py  options_field.py  version.py  warnigs.py  warnings.py
releasenotes/: config.yaml
source/: Calibrating.rst  Fine_Calibration_Tutorial.rst  conf.py  index.rst
stubs/: qiskit_experiments.calibration_management.BaseCalibrationExperiment.analysis.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.circuits.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.copy.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.experiment_type.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.from_config.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.run.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.set_run_options.html  qiskit_experiments.calibration_management.BaseCalibrationExperiment.set_transpile_options.html  qiskit_experiments.calibration_management.BasisGateLibrary.__getitem__.html  qiskit_experiments.calibration_management.BasisGateLibrary.__len__.html  qiskit_experiments.calibration_management.BasisGateLibrary.config.html  qiskit_experiments.calibration_management.BasisGateLibrary.default_values.html  qiskit_experiments.calibration_management.BasisGateLibrary.from_config.html  qiskit_experiments.calibration_management.BasisGateLibrary.get.html  qiskit_experiments.calibration_management.BasisGateLibrary.html  qiskit_experiments.calibration_management.BasisGateLibrary.items.html  qiskit_experiments.calibration_management.BasisGateLibrary.keys.html  qiskit_experiments.calibration_management.BasisGateLibrary.values.html  qiskit_experiments.calibration_management.Calibrations.calibration_parameter.html  qiskit_experiments.calibration_management.Calibrations.config.html  qiskit_experiments.calibration_management.Calibrations.default_inst_map.html  qiskit_experiments.calibration_management.Calibrations.get_inst_map.html  qiskit_experiments.calibration_management.Calibrations.get_parameter_value.html  qiskit_experiments.calibration_management.Calibrations.get_schedule.html  qiskit_experiments.calibration_management.Calibrations.has_template.html  qiskit_experiments.calibration_management.Calibrations.html  qiskit_experiments.calibration_management.Calibrations.inst_map_add.html  qiskit_experiments.calibration_management.Calibrations.libraries.html  qiskit_experiments.calibration_management.Calibrations.load.html  qiskit_experiments.calibration_management.Calibrations.parameters_table.html  qiskit_experiments.calibration_management.Calibrations.remove_schedule.html  qiskit_experiments.calibration_management.Calibrations.schedule_dependency.html  qiskit_experiments.calibration_management.Calibrations.update_inst_map.html  qiskit_experiments.calibration_management.EchoedCrossResonance.__len__.html  qiskit_experiments.calibration_management.EchoedCrossResonance.config.html  qiskit_experiments.calibration_management.EchoedCrossResonance.html  qiskit_experiments.calibration_management.EchoedCrossResonance.items.html  qiskit_experiments.calibration_management.EchoedCrossResonance.keys.html  qiskit_experiments.calibration_management.EchoedCrossResonance.num_qubits.html  (+1122 more)
test/: __init__.py  base.py  decorators.py  extended_equality.py  fake_backend.py  fake_experiment.py  fake_resonator_experiment.py  fake_service.py  mock_iq_backend.py  mock_job.py  rb_generate_data.py  test_Ramsey.py  test_autodocs.py  test_base.py  test_chained_experiment.py  test_composite.py  test_cross_resonance_hamiltonian.py  test_curve_fitting.py  test_discriminator.py  test_framework.py  test_half_angle.py  test_ham_tomo.py  test_iterated_experiment.py  test_mitigation.py  test_mock_iq_backend.py  test_partition.py  test_qubit_spectroscopy.py  test_randomized_benchmarking.py  test_rb.py  test_rb_analysis.py  test_readout_angle.py  test_readout_error.py  test_resonator_spectroscopy.py  test_settings.py  test_spectroscopy.py  test_store_init_args.py  test_t1.py  test_t2Ramsey.py  test_t2hahn.py  test_t2ramsey.py  (+7 more)
tools/: bump_version.py  check_latest_version.py  deploy_documentation.sh  deploy_documentation_dev.sh  other-builds.txt  prepare_release.py  verify_headers.py
tutorials/: calibrations.html  curve_analysis.html  (+6 more)
(+11489 files in other folders)
